--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
             line-height: 1.6;
             color: #1a1a1a;
-            background: #ffffff;
+            background: #fafafa;
         }
 
         /* Header/Navigation */
         header {
             position: sticky;
             top: 0;
-            background: #fff;
-            border-bottom: 1px solid #eee;
+            background: rgba(255, 255, 255, 0.95);
+            backdrop-filter: blur(10px);
+            border-bottom: 1px solid rgba(232, 76, 61, 0.1);
             padding: 1rem 0;
             z-index: 1000;
         }
@@ -39,8 +40,11 @@
 
         .logo {
             font-size: 1.5rem;
-            font-weight: 700;
-            color: #e84c3d;
+            font-weight: 800;
+            background: linear-gradient(135deg, #e84c3d 0%, #ff6b5b 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
             text-decoration: none;
         }
 
@@ -49,6 +53,7 @@
             text-decoration: none;
             color: #666;
             font-size: 0.95rem;
+            font-weight: 500;
             transition: color 0.3s;
         }
 
@@ -60,147 +65,195 @@
         .hero {
             max-width: 1200px;
             margin: 0 auto;
-            padding: 6rem 2rem;
+            padding: 7rem 2rem;
             text-align: center;
         }
 
         .hero h1 {
-            font-size: 3.5rem;
+            font-size: 4rem;
             margin-bottom: 1rem;
-            font-weight: 800;
-            line-height: 1.2;
-            color: #1a1a1a;
+            font-weight: 900;
+            line-height: 1.1;
+            background: linear-gradient(135deg, #1a1a1a 0%, #444 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
         }
 
         .hero .tagline {
-            font-size: 1.3rem;
+            font-size: 1.4rem;
             color: #666;
-            margin-bottom: 2rem;
+            margin-bottom: 2.5rem;
             max-width: 700px;
             margin-left: auto;
             margin-right: auto;
+            font-weight: 400;
+            line-height: 1.6;
         }
 
         .cta-button {
             display: inline-block;
-            background: #e84c3d;
+            background: linear-gradient(135deg, #e84c3d 0%, #ff6b5b 100%);
             color: white;
-            padding: 1rem 2.5rem;
-            border-radius: 6px;
+            padding: 1.1rem 2.8rem;
+            border-radius: 50px;
             text-decoration: none;
             font-weight: 600;
             font-size: 1rem;
-            transition: background 0.3s, transform 0.2s;
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
             cursor: pointer;
             border: none;
+            box-shadow: 0 10px 30px rgba(232, 76, 61, 0.3);
         }
 
         .cta-button:hover {
-            background: #d63c2d;
-            transform: translateY(-2px);
+            transform: translateY(-4px);
+            box-shadow: 0 15px 40px rgba(232, 76, 61, 0.4);
         }
 
         /* Value Props */
         .value-props {
             max-width: 1200px;
-            margin: 4rem auto;
+            margin: 6rem auto;
             padding: 0 2rem;
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 2rem;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 2.5rem;
         }
 
         .value-prop {
-            padding: 2rem;
-            background: #f8f8f8;
-            border-radius: 8px;
+            padding: 2.5rem;
+            background: white;
+            border-radius: 16px;
             text-align: center;
+            transition: all 0.3s;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.04);
+            border: 1px solid rgba(232, 76, 61, 0.1);
+        }
+
+        .value-prop:hover {
+            transform: translateY(-8px);
+            box-shadow: 0 15px 40px rgba(232, 76, 61, 0.15);
+            border-color: #e84c3d;
         }
 
         .value-prop h3 {
-            font-size: 1.3rem;
-            margin-bottom: 0.5rem;
+            font-size: 1.4rem;
+            margin-bottom: 0.8rem;
             color: #1a1a1a;
+            font-weight: 700;
         }
 
         .value-prop p {
             color: #666;
             font-size: 0.95rem;
+            line-height: 1.6;
         }
 
         /* Problem Section */
         .problem {
-            background: #f0f0f0;
-            padding: 4rem 2rem;
-            margin: 4rem 0;
+            background: linear-gradient(135deg, #1a1a1a 0%, #2d2d2d 100%);
+            padding: 5rem 2rem;
+            margin: 6rem 0;
+            color: white;
         }
 
         .problem-container {
-            max-width: 1000px;
+            max-width: 900px;
             margin: 0 auto;
         }
 
         .problem h2 {
-            font-size: 2.5rem;
-            margin-bottom: 1.5rem;
-            color: #1a1a1a;
+            font-size: 2.8rem;
+            margin-bottom: 2rem;
+            color: white;
+            font-weight: 800;
+            line-height: 1.3;
         }
 
         .problem p {
             font-size: 1.1rem;
-            color: #555;
-            margin-bottom: 1rem;
+            color: rgba(255, 255, 255, 0.85);
+            margin-bottom: 1.5rem;
             line-height: 1.8;
         }
 
         /* Solution Section */
         .solution {
             max-width: 1200px;
-            margin: 4rem auto;
+            margin: 6rem auto;
             padding: 0 2rem;
         }
 
         .solution h2 {
-            font-size: 2.5rem;
-            margin-bottom: 2rem;
+            font-size: 2.8rem;
+            margin-bottom: 3rem;
             text-align: center;
             color: #1a1a1a;
+            font-weight: 800;
         }
 
         .solution-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
             gap: 2rem;
             margin-bottom: 3rem;
         }
 
         .solution-item {
-            padding: 2rem;
-            border: 2px solid #eee;
-            border-radius: 8px;
-            transition: border-color 0.3s;
+            padding: 2.5rem;
+            background: white;
+            border-radius: 16px;
+            transition: all 0.3s;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.04);
+            border: 2px solid transparent;
+            position: relative;
         }
 
         .solution-item:hover {
             border-color: #e84c3d;
+            box-shadow: 0 15px 40px rgba(232, 76, 61, 0.15);
+            transform: translateY(-8px);
+        }
+
+        .solution-item::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 4px;
+            background: linear-gradient(90deg, #e84c3d 0%, #ff6b5b 100%);
+            border-radius: 16px 16px 0 0;
+            opacity: 0;
+            transition: opacity 0.3s;
+        }
+
+        .solution-item:hover::before {
+            opacity: 1;
         }
 
         .solution-item h4 {
-            font-size: 1.2rem;
-            margin-bottom: 0.5rem;
-            color: #e84c3d;
+            font-size: 1.3rem;
+            margin-bottom: 0.8rem;
+            background: linear-gradient(135deg, #e84c3d 0%, #ff6b5b 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            font-weight: 700;
         }
 
         .solution-item p {
             color: #666;
             font-size: 0.95rem;
+            line-height: 1.6;
         }
 
         /* Case Studies */
         .case-studies {
-            background: #f8f8f8;
-            padding: 4rem 2rem;
-            margin: 4rem 0;
+            background: linear-gradient(135deg, rgba(232, 76, 61, 0.05) 0%, rgba(255, 107, 91, 0.05) 100%);
+            padding: 5rem 2rem;
+            margin: 6rem 0;
         }
 
         .case-studies-container {
@@ -209,78 +262,97 @@
         }
 
         .case-studies h2 {
-            font-size: 2.5rem;
+            font-size: 2.8rem;
             margin-bottom: 3rem;
             text-align: center;
             color: #1a1a1a;
+            font-weight: 800;
         }
 
         .case-study {
             background: white;
-            padding: 2.5rem;
-            border-radius: 8px;
+            padding: 3rem;
+            border-radius: 16px;
             margin-bottom: 2rem;
-            border-left: 4px solid #e84c3d;
+            border-left: 5px solid #e84c3d;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.04);
+            transition: all 0.3s;
+        }
+
+        .case-study:hover {
+            box-shadow: 0 15px 40px rgba(232, 76, 61, 0.15);
+            transform: translateY(-4px);
         }
 
         .case-study-header {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            margin-bottom: 1rem;
+            margin-bottom: 1.5rem;
+            flex-wrap: wrap;
+            gap: 1rem;
         }
 
         .case-study h4 {
-            font-size: 1.3rem;
+            font-size: 1.4rem;
             color: #1a1a1a;
+            font-weight: 700;
         }
 
         .case-study-metric {
-            background: #e84c3d;
+            background: linear-gradient(135deg, #e84c3d 0%, #ff6b5b 100%);
             color: white;
-            padding: 0.5rem 1rem;
-            border-radius: 4px;
+            padding: 0.6rem 1.2rem;
+            border-radius: 50px;
             font-weight: 600;
             font-size: 0.9rem;
+            white-space: nowrap;
         }
 
         .case-study p {
-            color: #666;
-            margin-bottom: 1rem;
-            line-height: 1.7;
+            color: #555;
+            margin-bottom: 1.2rem;
+            line-height: 1.8;
+            font-size: 0.95rem;
         }
 
         .case-study-challenge {
-            background: #f0f0f0;
-            padding: 1rem;
-            border-radius: 4px;
-            margin: 1rem 0;
+            background: linear-gradient(135deg, rgba(232, 76, 61, 0.05) 0%, rgba(255, 107, 91, 0.05) 100%);
+            padding: 1.2rem;
+            border-radius: 8px;
+            margin: 1.5rem 0;
+            border-left: 3px solid #e84c3d;
         }
 
         .case-study-challenge strong {
             color: #e84c3d;
+            font-weight: 700;
         }
 
         /* CTA Section */
         .final-cta {
             max-width: 1000px;
-            margin: 4rem auto;
-            padding: 3rem 2rem;
+            margin: 6rem auto;
+            padding: 4rem 2rem;
             text-align: center;
-            background: linear-gradient(135deg, #e84c3d 0%, #d63c2d 100%);
+            background: linear-gradient(135deg, #e84c3d 0%, #ff6b5b 100%);
             color: white;
-            border-radius: 8px;
+            border-radius: 20px;
+            box-shadow: 0 20px 60px rgba(232, 76, 61, 0.3);
         }
 
         .final-cta h2 {
-            font-size: 2rem;
+            font-size: 2.5rem;
             margin-bottom: 1rem;
+            font-weight: 800;
+            line-height: 1.3;
         }
 
         .final-cta p {
             font-size: 1.1rem;
-            margin-bottom: 2rem;
+            margin-bottom: 2.5rem;
             opacity: 0.95;
+            line-height: 1.6;
         }
 
         .cta-button-white {
@@ -290,31 +362,46 @@
 
         .cta-button-white:hover {
             background: #f0f0f0;
+            color: #e84c3d;
         }
 
         /* Footer */
         footer {
             background: #1a1a1a;
             color: white;
-            padding: 2rem;
+            padding: 3rem 2rem;
             text-align: center;
             margin-top: 4rem;
         }
 
         footer p {
-            margin: 0.5rem 0;
+            margin: 0.8rem 0;
             font-size: 0.9rem;
-            opacity: 0.8;
+            opacity: 0.75;
+        }
+
+        footer a {
+            color: #ff6b5b;
+            text-decoration: none;
+            transition: color 0.3s;
+        }
+
+        footer a:hover {
+            color: #e84c3d;
         }
 
         /* Responsive */
         @media (max-width: 768px) {
             .hero h1 {
-                font-size: 2.2rem;
+                font-size: 2.5rem;
             }
 
             .hero .tagline {
                 font-size: 1.1rem;
+            }
+
+            .solution h2, .case-studies h2, .problem h2 {
+                font-size: 2rem;
             }
 
             nav {
@@ -327,7 +414,19 @@
             }
 
             .case-study-metric {
-                margin-top: 1rem;
+                align-self: flex-start;
+            }
+
+            .case-study {
+                padding: 2rem;
+            }
+
+            .final-cta {
+                padding: 2.5rem 1.5rem;
+            }
+
+            .final-cta h2 {
+                font-size: 1.8rem;
             }
         }
     </style>
