--- a/index.html
+++ b/index.html
@@ -221,16 +221,27 @@
             position: absolute;
             top: 0;
             left: 0;
-            width: 100%;
+            width: 0%;
             height: 4px;
             background: linear-gradient(90deg, #e84c3d 0%, #ff6b5b 100%);
             border-radius: 16px 16px 0 0;
-            opacity: 0;
-            transition: opacity 0.3s;
+            transition: width 0.4s ease;
         }
 
         .solution-item:hover::before {
-            opacity: 1;
+            width: 100%;
+        }
+
+        /* Number indicators */
+        .solution-item::after {
+            content: attr(data-number);
+            position: absolute;
+            top: 1.5rem;
+            right: 1.5rem;
+            font-size: 2.5rem;
+            font-weight: 800;
+            color: rgba(232, 76, 61, 0.1);
+            font-family: 'Arial', sans-serif;
         }
 
         .solution-item h4 {
@@ -277,11 +288,26 @@
             border-left: 5px solid #e84c3d;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.04);
             transition: all 0.3s;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .case-study::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            right: 0;
+            width: 100px;
+            height: 100px;
+            background: radial-gradient(circle, rgba(232, 76, 61, 0.08) 0%, transparent 70%);
+            border-radius: 50%;
+            pointer-events: none;
         }
 
         .case-study:hover {
             box-shadow: 0 15px 40px rgba(232, 76, 61, 0.15);
             transform: translateY(-4px);
+            border-left-color: #ff6b5b;
         }
 
         .case-study-header {
@@ -291,12 +317,19 @@
             margin-bottom: 1.5rem;
             flex-wrap: wrap;
             gap: 1rem;
+            position: relative;
+            z-index: 1;
         }
 
         .case-study h4 {
             font-size: 1.4rem;
             color: #1a1a1a;
             font-weight: 700;
+        }
+
+        .case-study > * {
+            position: relative;
+            z-index: 1;
         }
 
         .case-study-metric {
@@ -339,6 +372,32 @@
             color: white;
             border-radius: 20px;
             box-shadow: 0 20px 60px rgba(232, 76, 61, 0.3);
+            position: relative;
+            overflow: hidden;
+        }
+
+        .final-cta::before {
+            content: '';
+            position: absolute;
+            top: -50%;
+            right: -10%;
+            width: 400px;
+            height: 400px;
+            background: radial-gradient(circle, rgba(255, 255, 255, 0.15) 0%, transparent 70%);
+            border-radius: 50%;
+            pointer-events: none;
+        }
+
+        .final-cta::after {
+            content: '';
+            position: absolute;
+            bottom: -50%;
+            left: -10%;
+            width: 300px;
+            height: 300px;
+            background: radial-gradient(circle, rgba(255, 255, 255, 0.1) 0%, transparent 70%);
+            border-radius: 50%;
+            pointer-events: none;
         }
 
         .final-cta h2 {
@@ -346,6 +405,8 @@
             margin-bottom: 1rem;
             font-weight: 800;
             line-height: 1.3;
+            position: relative;
+            z-index: 1;
         }
 
         .final-cta p {
@@ -353,6 +414,13 @@
             margin-bottom: 2.5rem;
             opacity: 0.95;
             line-height: 1.6;
+            position: relative;
+            z-index: 1;
+        }
+
+        .final-cta .cta-button {
+            position: relative;
+            z-index: 1;
         }
 
         .cta-button-white {
@@ -367,27 +435,192 @@
 
         /* Footer */
         footer {
-            background: #1a1a1a;
+            background: linear-gradient(135deg, #1a1a1a 0%, #2d2d2d 100%);
             color: white;
-            padding: 3rem 2rem;
+            padding: 4rem 2rem;
             text-align: center;
             margin-top: 4rem;
+            position: relative;
+            overflow: hidden;
+        }
+
+        footer::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            height: 1px;
+            background: linear-gradient(90deg, transparent, #e84c3d, transparent);
         }
 
         footer p {
             margin: 0.8rem 0;
             font-size: 0.9rem;
             opacity: 0.75;
+            position: relative;
+            z-index: 1;
         }
 
         footer a {
             color: #ff6b5b;
             text-decoration: none;
             transition: color 0.3s;
+            font-weight: 600;
         }
 
         footer a:hover {
             color: #e84c3d;
+        }
+
+        /* Decorative Elements */
+        .hero-decoration {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            height: 500px;
+            overflow: hidden;
+            pointer-events: none;
+        }
+
+        .decoration-circle {
+            position: absolute;
+            border-radius: 50%;
+            opacity: 0.1;
+            animation: float 6s ease-in-out infinite;
+        }
+
+        .decoration-1 {
+            width: 300px;
+            height: 300px;
+            background: linear-gradient(135deg, #e84c3d 0%, #ff6b5b 100%);
+            top: -50px;
+            right: -100px;
+            animation-delay: 0s;
+        }
+
+        .decoration-2 {
+            width: 200px;
+            height: 200px;
+            background: linear-gradient(135deg, #ff6b5b 0%, #e84c3d 100%);
+            bottom: 100px;
+            left: -50px;
+            animation-delay: 1s;
+        }
+
+        .decoration-3 {
+            width: 250px;
+            height: 250px;
+            background: #e84c3d;
+            top: 100px;
+            left: 10%;
+            animation-delay: 2s;
+        }
+
+        @keyframes float {
+            0%, 100% {
+                transform: translateY(0px);
+            }
+            50% {
+                transform: translateY(20px);
+            }
+        }
+
+        /* Hero relative positioning for decorations */
+        .hero {
+            position: relative;
+        }
+
+        /* Value Prop Icons */
+        .value-prop::before {
+            content: '';
+            display: block;
+            width: 70px;
+            height: 70px;
+            margin: 0 auto 1.5rem;
+            background: linear-gradient(135deg, #e84c3d 0%, #ff6b5b 100%);
+            border-radius: 16px;
+            animation: pulse 3s ease-in-out infinite;
+        }
+
+        .value-prop:nth-child(1)::before {
+            background: linear-gradient(135deg, #e84c3d 0%, #ff6b5b 100%);
+        }
+
+        .value-prop:nth-child(2)::before {
+            background: linear-gradient(135deg, #ff6b5b 0%, #e84c3d 100%);
+        }
+
+        .value-prop:nth-child(3)::before {
+            background: linear-gradient(135deg, #ff6b5b 0%, #ff7d6a 100%);
+        }
+
+        @keyframes pulse {
+            0%, 100% {
+                box-shadow: 0 0 0 0 rgba(232, 76, 61, 0.7);
+            }
+            50% {
+                box-shadow: 0 0 0 10px rgba(232, 76, 61, 0);
+            }
+        }
+
+        /* Accent Lines */
+        .solution h2::after,
+        .case-studies h2::after {
+            content: '';
+            display: block;
+            width: 80px;
+            height: 4px;
+            background: linear-gradient(90deg, #e84c3d 0%, #ff6b5b 100%);
+            margin: 1rem auto 0;
+            border-radius: 2px;
+        }
+
+        /* Counter Animation */
+        .case-study-metric {
+            animation: slideInRight 0.6s ease-out;
+        }
+
+        @keyframes slideInRight {
+            from {
+                opacity: 0;
+                transform: translateX(20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateX(0);
+            }
+        }
+
+        /* Scroll reveal animation */
+        .value-prop, .solution-item, .case-study {
+            opacity: 0;
+            animation: fadeInUp 0.6s ease-out forwards;
+        }
+
+        .value-prop:nth-child(1) { animation-delay: 0.1s; }
+        .value-prop:nth-child(2) { animation-delay: 0.2s; }
+        .value-prop:nth-child(3) { animation-delay: 0.3s; }
+
+        .solution-item:nth-child(1) { animation-delay: 0.1s; }
+        .solution-item:nth-child(2) { animation-delay: 0.2s; }
+        .solution-item:nth-child(3) { animation-delay: 0.3s; }
+
+        @keyframes fadeInUp {
+            from {
+                opacity: 0;
+                transform: translateY(30px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        /* Problem section text highlight */
+        .problem p {
+            position: relative;
         }
 
         /* Responsive */
@@ -446,6 +679,11 @@
 
     <!-- Hero -->
     <section class="hero">
+        <div class="hero-decoration">
+            <div class="decoration-circle decoration-1"></div>
+            <div class="decoration-circle decoration-2"></div>
+            <div class="decoration-circle decoration-3"></div>
+        </div>
         <h1>Scale Faster, Cheaper, Smarter</h1>
         <p class="tagline">Custom tools and workflow automation that let you grow without hiring. We build the tech, you run the business.</p>
         <a href="#contact" class="cta-button">Schedule a Demo</a>
@@ -454,15 +692,15 @@
     <!-- Value Props -->
     <section class="value-props">
         <div class="value-prop">
-            <h3>⚡ Custom Tools</h3>
+            <h3>Custom Tools</h3>
             <p>Built specifically for your business. Not generic software. Real solutions to your real problems.</p>
         </div>
         <div class="value-prop">
-            <h3>💰 Cost Effective</h3>
+            <h3>Cost Effective</h3>
             <p>Skip the expensive SaaS subscriptions and bloated enterprise software. Pay for what you actually need.</p>
         </div>
         <div class="value-prop">
-            <h3>🔧 We Maintain It</h3>
+            <h3>We Maintain It</h3>
             <p>Build, deploy, and maintain. We handle updates, fixes, and optimization so you don't have to.</p>
         </div>
     </section>
