Added trades/service companies to positioning + 3 trade articles + fixed article links as email requests

--- a/insights.html
+++ b/insights.html
@@ -256,6 +256,7 @@
     <!-- Filters -->
     <div class="filters">
         <button class="filter-btn active" onclick="filterArticles('all')">All Industries</button>
+        <button class="filter-btn" onclick="filterArticles('trades')">🔧 Trades & Service</button>
         <button class="filter-btn" onclick="filterArticles('fitness')">🏋️ Fitness Studios</button>
         <button class="filter-btn" onclick="filterArticles('salon')">💇 Salons & Spas</button>
         <button class="filter-btn" onclick="filterArticles('hotel')">🏨 Hotels & Hospitality</button>
@@ -381,7 +382,52 @@
                 <p class="article-excerpt">Most agencies use 5+ disconnected tools. The ones doubling their margins are consolidating into one unified workflow. Here's what they switched to.</p>
                 <div class="article-meta">
                     <span>10 min read</span>
-                    <a href="#" class="read-more">Read Article →</a>
+                    <a href="mailto:Nami@sakuralabs.io?subject=Send me the article: Project Management Stack" class="read-more">Read Article →</a>
+                </div>
+            </div>
+        </article>
+
+        <article class="article" data-category="trades">
+            <div class="article-header">
+                <div class="article-category">Trades & Service</div>
+                <h2 class="article-title">Estimating Chaos: How Contractors Are Winning Bids 50% Faster</h2>
+                <div class="article-date">February 18, 2026</div>
+            </div>
+            <div class="article-body">
+                <p class="article-excerpt">Manual estimates take 4-6 hours per bid. Smart contractors are cutting that to 1 hour. Here's what they're doing differently—and it's not what you'd expect.</p>
+                <div class="article-meta">
+                    <span>9 min read</span>
+                    <a href="mailto:Nami@sakuralabs.io?subject=Send me the article: Estimating Chaos" class="read-more">Read Article →</a>
+                </div>
+            </div>
+        </article>
+
+        <article class="article" data-category="trades">
+            <div class="article-header">
+                <div class="article-category">Trades & Service</div>
+                <h2 class="article-title">Crew Scheduling Nightmare: The System Winning Contractors Use</h2>
+                <div class="article-date">February 17, 2026</div>
+            </div>
+            <div class="article-body">
+                <p class="article-excerpt">Most contractors use spreadsheets or nothing at all. No crew coordination, wrong tools showing up, communication chaos. The winners have ONE system.</p>
+                <div class="article-meta">
+                    <span>8 min read</span>
+                    <a href="mailto:Nami@sakuralabs.io?subject=Send me the article: Crew Scheduling Nightmare" class="read-more">Read Article →</a>
+                </div>
+            </div>
+        </article>
+
+        <article class="article" data-category="trades">
+            <div class="article-header">
+                <div class="article-category">Trades & Service</div>
+                <h2 class="article-title">Invoice Collection for Trade Companies: Stop Chasing Payments</h2>
+                <div class="article-date">February 16, 2026</div>
+            </div>
+            <div class="article-body">
+                <p class="article-excerpt">Trade companies average 45-60 day payment cycles (often longer). One simple system cut that to 15 days for most clients. Here's how.</p>
+                <div class="article-meta">
+                    <span>10 min read</span>
+                    <a href="mailto:Nami@sakuralabs.io?subject=Send me the article: Invoice Collection for Trades" class="read-more">Read Article →</a>
                 </div>
             </div>
         </article>
