--- a/index-v2.html
+++ b/index-v2.html
@@ -92,8 +92,6 @@
         .hero {
             padding-top: 140px;
             padding-bottom: 100px;
-            max-width: 1200px;
-            margin: 0 auto;
             padding-left: 2rem;
             padding-right: 2rem;
             text-align: center;
@@ -102,8 +100,7 @@
             background: linear-gradient(135deg, rgba(30, 64, 175, 0.03) 0%, rgba(59, 130, 246, 0.05) 100%), 
                         url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100" height="100"><defs><pattern id="dots" x="0" y="0" width="100" height="100" patternUnits="userSpaceOnUse"><circle cx="10" cy="10" r="1.5" fill="%231e40af" opacity="0.1"/><circle cx="30" cy="30" r="1" fill="%233b82f6" opacity="0.08"/><circle cx="60" cy="60" r="1.5" fill="%231e40af" opacity="0.1"/><circle cx="80" cy="20" r="1" fill="%233b82f6" opacity="0.08"/></pattern></defs><rect width="100%" height="100%" fill="white"/><rect width="100%" height="100%" fill="url(%23dots)"/></svg>') repeat;
             background-size: auto, 200px 200px;
-            border-radius: 30px;
-            margin: 40px 2rem;
+            background-attachment: fixed;
         }
 
         .hero-badge {
@@ -598,10 +595,12 @@
 
     <!-- Hero -->
     <section class="hero">
-        <div class="hero-badge">✨ Built for SMB Owners Who Are Done Losing Money</div>
-        <h1>Stop Losing Money to <span class="accent">Manual Chaos</span></h1>
-        <p class="subheading">Custom tools that replace your scattered software, eliminate admin overhead, and free up the money you're wasting on hiring. Built for your workflow. Managed by us. No learning curve.</p>
-        <a href="#cta" class="cta-primary">Get Started Free — No Card Required</a>
+        <div style="max-width: 900px; margin: 0 auto;">
+            <div class="hero-badge">✨ Built for SMB Owners Who Are Done Losing Money</div>
+            <h1>Stop Losing Money to <span class="accent">Manual Chaos</span></h1>
+            <p class="subheading">Custom tools that replace your scattered software, eliminate admin overhead, and free up the money you're wasting on hiring. Built for your workflow. Managed by us. No learning curve.</p>
+            <a href="#cta" class="cta-primary">Get Started Free — No Card Required</a>
+        </div>
         
         <div style="margin-top: 4rem; display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 2rem; max-width: 1000px; margin-left: auto; margin-right: auto;">
             <div style="text-align: center;">
