--- a/index-v2.html
+++ b/index-v2.html
@@ -185,6 +185,7 @@
             color: #1e40af;
             transition: opacity 0.3s;
             padding: 0.5rem;
+            display: none;
         }
 
         .carousel-btn:hover {
@@ -203,7 +204,17 @@
             text-align: center;
             min-width: 300px;
             border: 2px solid rgba(30, 64, 175, 0.2);
-            transition: all 0.3s;
+            transition: all 0.5s ease-in-out;
+            animation: slideIn 0.5s ease-in-out;
+        }
+
+        @keyframes slideIn {
+            from {
+                opacity: 0.7;
+            }
+            to {
+                opacity: 1;
+            }
         }
 
         .carousel-card:hover {
@@ -214,6 +225,18 @@
         .carousel-card .emoji {
             font-size: 2.5rem;
             margin-bottom: 1rem;
+            animation: scaleIn 0.6s ease-out;
+        }
+
+        @keyframes scaleIn {
+            from {
+                transform: scale(0.8);
+                opacity: 0;
+            }
+            to {
+                transform: scale(1);
+                opacity: 1;
+            }
         }
 
         .carousel-card h3 {
@@ -221,12 +244,25 @@
             color: #1a1f36;
             font-weight: 700;
             margin-bottom: 0.5rem;
+            animation: fadeInUp 0.6s ease-out 0.1s both;
         }
 
         .carousel-card p {
             color: #666;
             font-size: 0.9rem;
             margin-bottom: 1rem;
+            animation: fadeInUp 0.6s ease-out 0.2s both;
+        }
+
+        @keyframes fadeInUp {
+            from {
+                opacity: 0;
+                transform: translateY(10px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
 
         .carousel-dots {
@@ -237,18 +273,19 @@
         }
 
         .dot {
-            width: 8px;
-            height: 8px;
+            width: 10px;
+            height: 10px;
             border-radius: 50%;
-            background: rgba(30, 64, 175, 0.3);
+            background: rgba(30, 64, 175, 0.2);
             cursor: pointer;
-            transition: all 0.3s;
+            transition: all 0.4s ease;
         }
 
         .dot.active {
             background: #1e40af;
-            width: 24px;
-            border-radius: 4px;
+            width: 30px;
+            border-radius: 5px;
+            box-shadow: 0 2px 8px rgba(30, 64, 175, 0.3);
         }
 
         /* Hero Animation Background */
@@ -953,26 +990,37 @@
         }
 
         function nextSlide() {
-            if (currentIndex < trades.length - 1) {
-                currentIndex++;
-                updateCarousel();
-            }
+            currentIndex = (currentIndex + 1) % trades.length;
+            updateCarousel();
         }
 
         function prevSlide() {
-            if (currentIndex > 0) {
-                currentIndex--;
-                updateCarousel();
-            }
+            currentIndex = (currentIndex - 1 + trades.length) % trades.length;
+            updateCarousel();
         }
 
         function goToSlide(index) {
             currentIndex = index;
             updateCarousel();
+            resetAutoRotate();
+        }
+
+        let autoRotateInterval;
+
+        function startAutoRotate() {
+            autoRotateInterval = setInterval(nextSlide, 4000);
+        }
+
+        function resetAutoRotate() {
+            clearInterval(autoRotateInterval);
+            startAutoRotate();
         }
 
         // Initialize on page load
-        document.addEventListener('DOMContentLoaded', initCarousel);
+        document.addEventListener('DOMContentLoaded', () => {
+            initCarousel();
+            startAutoRotate();
+        });
     </script>
 </body>
 </html>
