Reverted carousel to simple grid + added competitive/FOMO messaging throughout - 'don't get left behind', 'competitors automating', urgent language

--- a/index-v2.html
+++ b/index-v2.html
@@ -723,33 +723,41 @@
     <!-- Hero -->
     <section class="hero">
         <div style="max-width: 900px; margin: 0 auto;">
-            <div class="hero-badge">✨ Built for SMB Owners Who Are Done Losing Money</div>
-            <h1>Stop Losing Money to <span class="accent">Manual Chaos</span></h1>
-            <p class="subheading">Custom tools that replace your scattered software, eliminate admin overhead, and free up the money you're wasting on hiring. Built for your workflow. Managed by us. No learning curve.</p>
+            <div class="hero-badge">⚡ Your Competitors Are Already Ahead</div>
+            <h1>Don't Get Left Behind <span class="accent">While Others Automate</span></h1>
+            <p class="subheading">Smarter businesses are cutting operational costs by 40% with custom automation. They're moving faster, serving more customers, and winning market share. We build the tools. We manage everything. You catch up and pull ahead.</p>
             <a href="#cta" class="cta-primary">Get Started Free — No Card Required</a>
         </div>
         
-        <!-- Carousel for Trades -->
-        <div class="carousel-container">
-            <h3 style="text-align: center; margin-bottom: 2rem; color: #1a1f36; font-weight: 700;">We Serve Every Trade & Service Business</h3>
-            <div class="carousel">
-                <button class="carousel-btn" id="prevBtn" onclick="prevSlide()">❮</button>
-                <div class="carousel-card">
-                    <div class="emoji" id="emoji">🔧</div>
-                    <h3 id="tradeTitle">Plumbers</h3>
-                    <p id="tradePain">Estimating, Scheduling, Invoice Collection</p>
-                </div>
-                <button class="carousel-btn" id="nextBtn" onclick="nextSlide()">❯</button>
+        <div style="margin-top: 4rem; display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 1.5rem; max-width: 900px; margin-left: auto; margin-right: auto;">
+            <div style="text-align: center; padding: 1.5rem; background: white; border-radius: 12px; border: 1px solid rgba(30, 64, 175, 0.1);">
+                <div style="font-size: 2rem; margin-bottom: 0.5rem;">🔧</div>
+                <div style="font-weight: 600; color: #1a1f36; font-size: 0.95rem;">Trades & Contractors</div>
             </div>
-            <div class="carousel-dots" id="dots"></div>
+            <div style="text-align: center; padding: 1.5rem; background: white; border-radius: 12px; border: 1px solid rgba(30, 64, 175, 0.1);">
+                <div style="font-size: 2rem; margin-bottom: 0.5rem;">🏋️</div>
+                <div style="font-weight: 600; color: #1a1f36; font-size: 0.95rem;">Fitness Studios</div>
+            </div>
+            <div style="text-align: center; padding: 1.5rem; background: white; border-radius: 12px; border: 1px solid rgba(30, 64, 175, 0.1);">
+                <div style="font-size: 2rem; margin-bottom: 0.5rem;">💇</div>
+                <div style="font-weight: 600; color: #1a1f36; font-size: 0.95rem;">Salons & Spas</div>
+            </div>
+            <div style="text-align: center; padding: 1.5rem; background: white; border-radius: 12px; border: 1px solid rgba(30, 64, 175, 0.1);">
+                <div style="font-size: 2rem; margin-bottom: 0.5rem;">🏨</div>
+                <div style="font-weight: 600; color: #1a1f36; font-size: 0.95rem;">Hotels</div>
+            </div>
+            <div style="text-align: center; padding: 1.5rem; background: white; border-radius: 12px; border: 1px solid rgba(30, 64, 175, 0.1);">
+                <div style="font-size: 2rem; margin-bottom: 0.5rem;">🎯</div>
+                <div style="font-weight: 600; color: #1a1f36; font-size: 0.95rem;">Agencies</div>
+            </div>
         </div>
     </section>
 
     <!-- Problem -->
     <section class="problem">
         <div class="problem-content">
-            <div class="section-label">The Reality</div>
-            <h2>Your Team Is Drowning in Manual Work</h2>
+            <div class="section-label">The Competitive Reality</div>
+            <h2>While You're Manual, They're Automated</h2>
             
             <div class="problem-list">
                 <div class="problem-item">
@@ -921,9 +929,9 @@
 
     <!-- Final CTA -->
     <section class="final-cta" id="cta">
-        <h2>Stop Paying for the Problem. Start Solving It.</h2>
-        <p>30-minute discovery call. We'll show you exactly how much money you're losing to manual chaos and what it would cost to fix it. No sales pitch. Just numbers.</p>
-        <a href="mailto:Nami@sakuralabs.io?subject=Schedule Discovery Call" class="cta-secondary">Schedule Discovery Call</a>
+        <h2>Your Window to Catch Up Is Closing</h2>
+        <p>The longer you wait, the further behind you fall. Smart businesses are already automating. Let's get you there in weeks, not months. One discovery call. We'll show you exactly how much your competition is winning.</p>
+        <a href="mailto:Nami@sakuralabs.io?subject=Schedule Discovery Call" class="cta-secondary">Get Ahead Now →</a>
     </section>
 
     <!-- Footer -->
@@ -934,7 +942,10 @@
     </footer>
 
     <script>
-        // Carousel Data
+        // Placeholder for future functionality
+    </script>
+    <script style="display:none;">
+        // Carousel Data (archived)
         const trades = [
             { emoji: '🔧', title: 'Plumbers', pain: 'Estimating, Scheduling, Invoice Collection' },
             { emoji: '⚡', title: 'Electricians', pain: 'Job Costing, Crew Scheduling, Invoicing' },
