--- a/index-v2.html
+++ b/index-v2.html
@@ -725,7 +725,7 @@
             <div class="hero-badge">⚡ Your Competitors Are Already Ahead</div>
             <h1>Don't Get Left Behind <span class="accent">While Others Automate</span></h1>
             <p class="subheading">Businesses are cutting operational costs by 40% with custom automation. They're moving faster, serving more customers, and winning market share. We build the tools. We manage everything. You catch up and pull ahead.</p>
-            <a href="#cta" class="cta-primary">Get Started Free — No Card Required</a>
+            <a href="#cta" class="cta-primary">Get In Touch</a>
         </div>
         
         <div style="margin-top: 4rem; display: grid; grid-template-columns: repeat(4, 1fr); gap: 1.5rem; max-width: 1100px; margin-left: auto; margin-right: auto;">
